# gabc

./: README.md  gabc.desktop  me.pm.m0dns.gabc.json  meson.build  write_git_header  write_git_header.sh
.flatpak-builder/cache/refs/heads/x86_64-me.pm.m0dns.gabc.json/: init
.flatpak-builder/checksums/: x86_64-me.pm.m0dns.gabc.json
data/: abc.lang  me.pm.m0dns.gabc.appdata.xml.in  me.pm.m0dns.gabc.desktop.in  me.pm.m0dns.gabc.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: gabc-application.c  gabc-application.h  gabc-file-filters.c  gabc-file-filters.h  gabc-log-window.c  gabc-log-window.cmb  gabc-log-window.h  gabc-log-window.ui  gabc-prefs-window.c  gabc-prefs-window.h  gabc-prefs-window.ui  gabc-save-changes-dialog-private.h  gabc-save-changes-dialog.c  gabc-tunebook.c  gabc-tunebook.h  gabc-window.c  gabc-window.h  gabc-window.ui  gabc.gresource.xml  main.c  me.pm.m0dns.gabc.gschema.xml  meson.build
src/gtk/: help-overlay.ui
